# tapcue

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  clippy.toml  tapcue.toml.example
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.prek/: config.toml
benches/: stream_processing.rs
contrib/tldr/pages/common/: tapcue.md
docs/: format-detection.md  tap14-compliance.md
docs/man/: tapcue.1
docs/tldr/: tapcue.md
scripts/: bootstrap-dev-tools.sh  capture-readme-notification.sh  check-doc-links.sh  dogfood-nextest.sh  render-notification-cutout.py  render-readme-demo.sh  show-readme-notification.sh  verify-bun-integration.sh  verify-go-integration.sh  verify-jest-integration.sh  verify-junit-run-integration.sh  verify-nextest-integration.sh  verify-npm-tap-integration.sh  verify-pytest-integration.sh  verify-runner-integrations.sh  verify-unittest-integration.sh  verify-vitest-integration.sh
src/: bun_stream.rs  cli.rs  config.rs  doctor.rs  init.rs  json_stream.rs  junit_reports.rs  junit_resolution.rs  lib.rs  line_buffer.rs  main.rs  notifier.rs  processor.rs  run.rs  state.rs  summary.rs
tests/: cli.rs  property_parsers.rs  stream_formats.rs  tap14_conformance.rs
tests/common/: mod.rs  property_strategies.rs
tests/fixtures/: bun_default.txt  failing.tap  go_test_json.ndjson  jest_report.json  junit_failure.xml  junit_success.xml  nextest_json.ndjson  npm_tap.txt  passing.tap  vitest_report.json
tests/runner-fixtures/bun-default/: package.json  sample.test.ts
tests/runner-fixtures/go-sample/: go.mod  sample_test.go
tests/runner-fixtures/jest-json/: package-lock.json  package.json  sample.test.js
tests/runner-fixtures/npm-tap/: package-lock.json  package.json
tests/runner-fixtures/python-pytest/: requirements.txt  test_sample.py
tests/runner-fixtures/python-unittest/: requirements.txt  run_tap.py  test_sample.py
tests/runner-fixtures/rust-nextest/: Cargo.toml
tests/runner-fixtures/vitest-json/: package-lock.json  package.json  sample.test.js
(+2 files in other folders)
