[package]
name = "tapcue"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["Kunal K. Sarkhel <ksarkhel@gmu.edu>"]
license = "Apache-2.0"
description = "Stream TAP from stdin and emit desktop notifications for failures, bailouts, and run summary."
repository = "https://github.com/techwizrd/tapcue"
homepage = "https://github.com/techwizrd/tapcue"
documentation = "https://docs.rs/tapcue"
readme = "README.md"
keywords = ["tap", "cli", "testing", "notifications"]
categories = ["command-line-utilities", "development-tools::testing"]

[features]
benchmarks = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
glob = "0.3"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.8"
predicates = "3.1"
proptest = "1.6"
tempfile = "3.10"

[[bench]]
name = "stream_processing"
harness = false
required-features = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1
strip = true
